change name homepage

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portofolio-3",
-  "homepage": "http://habibulilahportfolio.com",
+  "homepage": "http://habibulilah.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
