--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portofolio-3",
+  "name": "habibulilah",
   "homepage": "http://habibulilah.github.io",
   "version": "0.1.0",
   "private": true,
