--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "habibulilah",
-  "homepage": "http://habibulilah.github.io",
+  "homepage": "https://Habibulilah2.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
