--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "habibulilah",
+  "name": "Habibulilah2",
   "homepage": "https://Habibulilah2.github.io",
   "version": "0.1.0",
   "private": true,
