--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Habibulilah2",
-  "homepage": "https://Habibulilah2.github.io",
+  "name": "habibulilah",
+  "homepage": "https://Habibulilah2.github.io/habibulilah",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
